--- a/VenueLocator/Base.lproj/Main.storyboard
+++ b/VenueLocator/Base.lproj/Main.storyboard
@@ -40,6 +40,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="162" height="227"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QkE-a0-7aa" customClass="VLVenueCardPresenter">
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <connections>
+                                                        <outlet property="imageView" destination="Tj5-Zq-E95" id="3hB-r3-O4B"/>
+                                                        <outlet property="nameLabel" destination="Fy8-kg-zAH" id="osO-yY-7u9"/>
+                                                    </connections>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fy8-kg-zAH">
                                                     <rect key="frame" x="13" y="171" width="136" height="38"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -55,7 +62,7 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Tj5-Zq-E95" secondAttribute="trailing" constant="1" id="CdJ-5N-xlH"/>
                                             <constraint firstItem="Fy8-kg-zAH" firstAttribute="leading" secondItem="gGX-Er-9q9" secondAttribute="leadingMargin" constant="5" id="aG2-Mj-6gI"/>
@@ -65,6 +72,9 @@
                                             <constraint firstItem="Tj5-Zq-E95" firstAttribute="leading" secondItem="gGX-Er-9q9" secondAttribute="leading" constant="1" id="r1Z-Eo-vBv"/>
                                             <constraint firstItem="Tj5-Zq-E95" firstAttribute="top" secondItem="gGX-Er-9q9" secondAttribute="top" constant="1" id="vZY-io-Vd7"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="presenter" destination="QkE-a0-7aa" id="WuD-g2-UJV"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
