--- a/VenueLocator/Base.lproj/Main.storyboard
+++ b/VenueLocator/Base.lproj/Main.storyboard
@@ -30,50 +30,82 @@
                                 <rect key="frame" x="5" y="64" width="590" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aBy-Dv-H5P">
-                                    <size key="itemSize" width="162" height="227"/>
+                                    <size key="itemSize" width="570" height="193"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VenueCardCell" id="gGX-Er-9q9" customClass="VLVenueCardCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="162" height="227"/>
+                                        <rect key="frame" x="10" y="10" width="570" height="193"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="162" height="227"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="570" height="193"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QkE-a0-7aa" customClass="VLVenueCardPresenter">
+                                                    <rect key="frame" x="48" y="8" width="84" height="16"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <connections>
+                                                        <outlet property="addressTextView" destination="AKy-Mw-9k3" id="nsR-yA-8rz"/>
+                                                        <outlet property="distanceLabel" destination="JQC-EP-XUg" id="cdM-Ya-abf"/>
                                                         <outlet property="imageView" destination="Tj5-Zq-E95" id="3hB-r3-O4B"/>
                                                         <outlet property="nameLabel" destination="Fy8-kg-zAH" id="osO-yY-7u9"/>
                                                     </connections>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fy8-kg-zAH">
-                                                    <rect key="frame" x="13" y="171" width="136" height="38"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tj5-Zq-E95">
-                                                    <rect key="frame" x="1" y="1" width="160" height="160"/>
+                                                    <rect key="frame" x="10" y="10" width="173" height="173"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="Tj5-Zq-E95" secondAttribute="height" multiplier="1:1" id="GbF-g4-1Y9"/>
                                                     </constraints>
                                                 </imageView>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKy-Mw-9k3">
+                                                    <rect key="frame" x="191" y="38" width="366" height="54"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="54" id="zXf-hn-QVf"/>
+                                                    </constraints>
+                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fy8-kg-zAH">
+                                                    <rect key="frame" x="191" y="10" width="366" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20.5" id="yCq-6I-gCb"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JQC-EP-XUg">
+                                                    <rect key="frame" x="191" y="164" width="371" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20.5" id="Qqf-RL-C4z"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Tj5-Zq-E95" secondAttribute="trailing" constant="1" id="CdJ-5N-xlH"/>
-                                            <constraint firstItem="Fy8-kg-zAH" firstAttribute="leading" secondItem="gGX-Er-9q9" secondAttribute="leadingMargin" constant="5" id="aG2-Mj-6gI"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Fy8-kg-zAH" secondAttribute="trailing" constant="5" id="AiG-p8-Yd6"/>
+                                            <constraint firstItem="JQC-EP-XUg" firstAttribute="bottom" secondItem="gGX-Er-9q9" secondAttribute="bottomMargin" id="By7-fl-A8L"/>
+                                            <constraint firstItem="AKy-Mw-9k3" firstAttribute="top" secondItem="Fy8-kg-zAH" secondAttribute="bottom" constant="8" id="K9w-o0-sa6"/>
+                                            <constraint firstItem="Fy8-kg-zAH" firstAttribute="top" secondItem="gGX-Er-9q9" secondAttribute="topMargin" constant="2" id="QZ0-6r-qAb"/>
+                                            <constraint firstItem="AKy-Mw-9k3" firstAttribute="leading" secondItem="Fy8-kg-zAH" secondAttribute="leading" id="VnZ-do-LLS"/>
+                                            <constraint firstItem="Fy8-kg-zAH" firstAttribute="leading" secondItem="Tj5-Zq-E95" secondAttribute="trailing" constant="8" id="cZo-8o-qK2"/>
+                                            <constraint firstItem="Tj5-Zq-E95" firstAttribute="top" secondItem="gGX-Er-9q9" secondAttribute="topMargin" constant="2" id="hQn-Bv-TQb"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="Fy8-kg-zAH" secondAttribute="trailing" constant="5" id="hjE-fa-Wgj"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="Fy8-kg-zAH" secondAttribute="bottom" constant="10" id="iyc-qx-JZF"/>
-                                            <constraint firstItem="Fy8-kg-zAH" firstAttribute="top" secondItem="Tj5-Zq-E95" secondAttribute="bottom" constant="10" id="mcg-h5-mbq"/>
-                                            <constraint firstItem="Tj5-Zq-E95" firstAttribute="leading" secondItem="gGX-Er-9q9" secondAttribute="leading" constant="1" id="r1Z-Eo-vBv"/>
-                                            <constraint firstItem="Tj5-Zq-E95" firstAttribute="top" secondItem="gGX-Er-9q9" secondAttribute="top" constant="1" id="vZY-io-Vd7"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Tj5-Zq-E95" secondAttribute="bottom" constant="2" id="nxG-r5-Prj"/>
+                                            <constraint firstItem="JQC-EP-XUg" firstAttribute="trailing" secondItem="gGX-Er-9q9" secondAttribute="trailingMargin" id="skL-8A-cVQ"/>
+                                            <constraint firstItem="JQC-EP-XUg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AKy-Mw-9k3" secondAttribute="bottom" constant="8" id="uuV-aW-2vm"/>
+                                            <constraint firstItem="Tj5-Zq-E95" firstAttribute="leading" secondItem="gGX-Er-9q9" secondAttribute="leadingMargin" constant="2" id="wev-2o-6wx"/>
+                                            <constraint firstItem="JQC-EP-XUg" firstAttribute="leading" secondItem="Tj5-Zq-E95" secondAttribute="trailing" constant="8" id="xGn-z0-7HE"/>
+                                            <constraint firstItem="AKy-Mw-9k3" firstAttribute="trailing" secondItem="Fy8-kg-zAH" secondAttribute="trailing" id="xeo-9S-udW"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="presenter" destination="QkE-a0-7aa" id="WuD-g2-UJV"/>
@@ -82,6 +114,7 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="XYd-mF-OhC"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="qoY-af-tkA"/>
                                 </connections>
                             </collectionView>
                         </subviews>
