--- a/VenueLocator/Base.lproj/Main.storyboard
+++ b/VenueLocator/Base.lproj/Main.storyboard
@@ -252,6 +252,9 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="292" id="usZ-BY-axI"/>
                                             </constraints>
+                                            <connections>
+                                                <outlet property="delegate" destination="HjK-bC-aCu" id="OPd-Fw-cJI"/>
+                                            </connections>
                                         </mapView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HjK-bC-aCu" customClass="VLVenueDetailMapPresenter">
                                             <rect key="frame" x="8" y="8" width="0.0" height="0.0"/>
